--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "clean:build": "rimraf ./build && mkdir build",
-    "prebuild": "run-p clean:build",
     "build": "webpack --config ./webpack.config.prod.js",
+    "clean:build": "rimraf ./build && mkdir build",
+    "dev": "webpack-dev-server --config webpack.config.dev.js --port 3001",
+    "prebuild": "run-p clean:build",
     "postDevBuild": "run-p serve:build",
     "serve:build": "http-server ./build",
     "start": "node server.js",
-    "startDev": "webpack-dev-server --config webpack.config.dev.js --port 3001",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
